correction de la version mobile et upgrade du footer

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,13 @@ html {
 
 body {
     background-color: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
 
 img.logo {
